// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
<hr
  aria-orientation="horizontal"
  class="wp-components-divider wp-components-separator css-1ji2rlx"
  data-g2-c16t="true"
  data-g2-component="Separator"
  role="separator"
/>
`;

exports[`props should render margin 1`] = `
<hr
  aria-orientation="horizontal"
  class="wp-components-divider wp-components-separator css-13omd46"
  data-g2-c16t="true"
  data-g2-component="Separator"
  role="separator"
/>
`;

exports[`props should render marginBottom 1`] = `
<hr
  aria-orientation="horizontal"
  class="wp-components-divider wp-components-separator css-130aa3f"
  data-g2-c16t="true"
  data-g2-component="Separator"
  role="separator"
/>
`;

exports[`props should render marginTop 1`] = `
<hr
  aria-orientation="horizontal"
  class="wp-components-divider wp-components-separator css-bwv9ow"
  data-g2-c16t="true"
  data-g2-component="Separator"
  role="separator"
/>
`;
